--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.2.2",
     "react-router-dom": "^6.13.0",
     "styled-components": "^6.0.0-rc.3",
     "sweetalert2": "^11.7.12",
