--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.2.2",
